--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -227,7 +227,7 @@ main {
 }
 
 .quantity-controls button {
-  background-color: #ecf0f1;
+  background-color: grey;
   border: none;
   width: 35px;
   height: 35px;
@@ -263,7 +263,7 @@ main {
   cursor: pointer;
   font-size: 0.9rem;
 }
-h2,h3,h4,p {
+h2,h3,h4,p,span{
   color: #000;
 }
 
